--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-pytest
-fastapi
-email-validator
-python-dotenv
-requests
-pydantic
-
-fastapi-pagination
+python = "^3.12"
+pytest = "^8.3.4"
+fastapi = "^0.115.6"
+email-validator = "^2.2.0"
+python-dotenv = "^1.0.1"
+requests = "^2.32.3"
+pydantic = "^2.10.5"
+fastapi-pagination = "^0.12.34"
+uvicorn = "^0.34.0"
+jsondiff = "^2.2.1"
