add main & AppStatus

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,8 @@ python-dotenv = "^1.0.1"
 requests = "^2.32.3"
 pydantic = "^2.10.5"
 fastapi-pagination = "^0.12.34"
-uvicorn = "^0.34.0"
 jsondiff = "^2.2.1"
+
+pydantic~=2.11.3
+uvicorn~=0.34.2
+fastapi~=0.115.12
