--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ python = "^3.12"
 pytest = "^8.3.4"
 fastapi = "^0.115.6"
 email-validator = "^2.2.0"
-python-dotenv = "^1.0.1"
 requests = "^2.32.3"
 pydantic = "^2.10.5"
 fastapi-pagination = "^0.12.34"
@@ -11,3 +10,5 @@ jsondiff = "^2.2.1"
 pydantic~=2.11.3
 uvicorn~=0.34.2
 fastapi~=0.115.12
+python-dotenv~=1.1.0
+pytest~=8.3.5
