write all tests

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ python = "^3.12"
 pytest = "^8.3.4"
 fastapi = "^0.115.6"
 email-validator = "^2.2.0"
-requests = "^2.32.3"
 pydantic = "^2.10.5"
 fastapi-pagination = "^0.12.34"
 jsondiff = "^2.2.1"
@@ -12,3 +11,4 @@ uvicorn~=0.34.2
 fastapi~=0.115.12
 python-dotenv~=1.1.0
 pytest~=8.3.5
+requests~=2.32.3
